예약기능 추가

--- a/GolfApp/Storyboard/Base.lproj/Main.storyboard
+++ b/GolfApp/Storyboard/Base.lproj/Main.storyboard
@@ -326,7 +326,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Mkc-j4-8WO"/>
+        <segue reference="7qW-nl-djR"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="figure.golf" catalog="system" width="83" height="128"/>
