--- a/GolfApp/Storyboard/ReservationViewController.storyboard
+++ b/GolfApp/Storyboard/ReservationViewController.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Reservation View Cell View Controller-->
+        <!--Title-->
         <scene sceneID="5TA-rB-eoR">
             <objects>
                 <viewController id="cpW-qj-a41" customClass="ReservationViewCellViewController" customModule="GolfApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,25 +17,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qW7-6N-BHH">
-                                <rect key="frame" x="16" y="74" width="361" height="265"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yaP-lP-FaA">
+                                <rect key="frame" x="16" y="85" width="361" height="703"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이름 / 국적" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0MB-jY-a3Y">
-                                <rect key="frame" x="16" y="304" width="361" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hyi-6Z-tcN">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="2000"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d0w-2x-Rea">
+                                                <rect key="frame" x="0.0" y="10" width="353" height="253"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="353" id="jPk-rl-lh9"/>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="255" id="s94-ky-tHi"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이름 / 국적" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vom-Rq-ljO">
+                                                <rect key="frame" x="140" y="273" width="73" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="yvp-K1-vYJ">
+                                                <rect key="frame" x="21" y="302" width="320" height="307"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            </datePicker>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Abe-gk-Gd9">
+                                                <rect key="frame" x="20" y="617" width="321" height="324"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReservationCell" id="Ht3-wF-Oct" customClass="ReservationCell" customModule="GolfApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="50" width="321" height="43.666667938232422"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ht3-wF-Oct" id="Nqi-oD-Lh7">
+                                                            <rect key="frame" x="0.0" y="0.0" width="321" height="43.666667938232422"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtb-NG-pnN">
+                                                                    <rect key="frame" x="20" y="11" width="178" height="21"/>
+                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </tableViewCellContentView>
+                                                        <connections>
+                                                            <outlet property="label" destination="mtb-NG-pnN" id="a8k-Vf-Uv7"/>
+                                                        </connections>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="cpW-qj-a41" id="6ec-Ik-X4L"/>
+                                                    <outlet property="delegate" destination="cpW-qj-a41" id="Zjv-qg-7cM"/>
+                                                </connections>
+                                            </tableView>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjA-I9-loM">
+                                                <rect key="frame" x="114" y="949" width="133" height="61"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="예약하기"/>
+                                                <connections>
+                                                    <action selector="Reservation:" destination="cpW-qj-a41" eventType="touchUpInside" id="yKA-hI-hU0"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2000" id="HQh-vx-9ey"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Hyi-6Z-tcN" firstAttribute="width" secondItem="Rnr-Yo-0jb" secondAttribute="width" id="0cm-sb-ZyF"/>
+                                    <constraint firstItem="Hyi-6Z-tcN" firstAttribute="bottom" secondItem="BhD-1h-lTP" secondAttribute="bottom" id="92c-70-Zjv"/>
+                                    <constraint firstItem="Hyi-6Z-tcN" firstAttribute="trailing" secondItem="BhD-1h-lTP" secondAttribute="trailing" id="MUW-z5-iu1"/>
+                                    <constraint firstItem="Hyi-6Z-tcN" firstAttribute="leading" secondItem="BhD-1h-lTP" secondAttribute="leading" id="qVc-Am-yty"/>
+                                    <constraint firstItem="Hyi-6Z-tcN" firstAttribute="top" secondItem="BhD-1h-lTP" secondAttribute="top" id="uTu-gE-gXj"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="BhD-1h-lTP"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Rnr-Yo-0jb"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rfm-69-n5H"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="9lD-hq-G8w"/>
+                    <navigationItem key="navigationItem" title="Title" id="xNI-cv-fhG"/>
                     <connections>
-                        <outlet property="proImage" destination="qW7-6N-BHH" id="CB4-MT-79Z"/>
-                        <outlet property="proInfo" destination="0MB-jY-a3Y" id="nzQ-t2-Mou"/>
+                        <outlet property="datePicker" destination="yvp-K1-vYJ" id="xzH-AA-htG"/>
+                        <outlet property="dateTableView" destination="Abe-gk-Gd9" id="ZJP-dU-qUn"/>
+                        <outlet property="proImage" destination="d0w-2x-Rea" id="SCI-9R-KYq"/>
+                        <outlet property="proInfo" destination="Vom-Rq-ljO" id="woa-ac-pPy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UWK-uJ-Fee" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
